# nix-torch-bin-pascal

./: .gitignore  .mcp.json  .rules  CLEANUP.md  PASCAL-Notes.md  PASCAL-Support.md  README.md  concretise.nix  develop.nix  devenv.nix  devenv.yaml  flake.nix  human-todo-notes.md  human-todo-notes.txt  impl-overview.md  mcp-commands.txt  pascal.md  pyproject.toml  pytorch-support-matrix.md  refactor_immediate_todo.md  refactor_impl.md  refactor_plan.md  request.txt  run-tests.sh  test-mamba-triton.py  test-retry-wrappers.nix  test-torch.py  test.nix  test_torch_cuda.py  upstream-refs.md  wheel-helpers.nix
causal-conv1d/: binary-hashes.nix  generate-hashes.py  high-level.nix  override.nix
causal-conv1d-bin/: generate-hashes.py
concretise/: default.nix  hld-helpers.nix  source-build-helpers.nix
example/: default.nix  flake.nix
examples/: build-with-retry.sh
flash-attn/: generate-hashes.py  high-level.nix  override.nix
flash-attn-bin/: binary-hashes.nix  generate-hashes.py
generate-binary-hashes/: common.py  lib.nix  nix_writer.py  source_github.py  source_torch.py
generate-hashes/: lib.nix  main.py  pkg_helpers.py  source_fetcher.py  source_torch.py  source_torchao.py  source_triton.py
nix-retry-wrapper/: default.nix  inject-wrappers.nix  stdenv-with-retry.nix  wrap-cuda-packages.nix
pkgs/: default.nix  hld-type.nix
test-runner/: main.py
torch-bin/: override-common.nix
torch-bin-cu126/: README.md  binary-hashes.nix  cuda-packages-pascal.nix  generate-hashes.py  override.nix
torch-bin-cu128/: binary-hashes.nix  generate-hashes.py  override.nix
(+270 files in other folders)
