[project]
name = "devenv-torchc126-test"
version = "0.1.0"
description = "PyTorch 2.10 with CUDA 12.6 and Flash Attention"
requires-python = ">=3.13"
dependencies = [
    "torch==2.9.1+cu126",
    "flash-attn>=2.0.0",
]

[tool.uv.extra-build-dependencies]
"flash_attn-2.8.3" = ["setuptools"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Specify the PyTorch CUDA 12.6 index for prebuilt wheels
extra-index-url = ["https://download.pytorch.org/whl/cu126"]

[tool.uv.sources]
# Use PyTorch's CUDA 12.6 wheel repository
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
